*** empty log message ***
git-svn-id: https://scm.mmbase.org/mmbase/trunk@13855 91430c5f-d668-0410-9e7d-dd663366dcfd

--- a/speeltuin/mihxil/kupu/mmbase/index.jspx
+++ b/speeltuin/mihxil/kupu/mmbase/index.jspx
@@ -125,7 +125,7 @@
       <div id="leftColumnContent">
         
     <div id="tree">
-      <mm:include page="tree.jspx?parent=true"/>
+      <mm:include page="tree.jspx?trunk=true"/>
     </div>
   
         
