fixed a typo and removed a useless line
git-svn-id: https://scm.mmbase.org/mmbase/trunk@13859 91430c5f-d668-0410-9e7d-dd663366dcfd

--- a/mmweb/css/mmbase.css
+++ b/mmweb/css/mmbase.css
@@ -3,7 +3,6 @@ body
 	font-family: "Lucida Grande", Verdana, Arial, sans-serif;
 	font-size: 10px;
 	background-color: white;
-	display: float;
 	margin: 0px;
 	padding: 0px;
 }
@@ -69,7 +68,7 @@ h1
 	font-weight: bold;
 	color: #003333;
 	text-align: left;
-	padding-botom: 5px;
+	padding-bottom: 5px;
 }
 
 h2
