*** empty log message ***
git-svn-id: https://scm.mmbase.org/mmbase/trunk@13871 91430c5f-d668-0410-9e7d-dd663366dcfd

--- a/speeltuin/mihxil/kupu/mmbase/index.jspx
+++ b/speeltuin/mihxil/kupu/mmbase/index.jspx
@@ -12,8 +12,10 @@
       <jsp:output xmlns:jsp="http://java.sun.com/JSP/Page" doctype-root-element="html" doctype-public="-//W3C//DTD XHTML 1.0 Strict//EN" doctype-system="http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"/>
 
       <mm:cloud xmlns:mm="http://www.mmbase.org/mmbase-taglib-2.0" rank="basic user">
-        <mm:import externid="language">client</mm:import>
-        <mm:content type="text/html" language="$language" expires="0">
+	<mm:import id="rich_language" externid="language"/>
+        <mm:import externid="rich_language" from="this,session">client</mm:import>
+	<mm:write session="rich_language" referid="rich_language"/>
+        <mm:content type="text/html" language="$rich_language" expires="0">
           <fmt:bundle xmlns:fmt="http://java.sun.com/jsp/jstl/fmt" basename="org.oscom.kupu.Messages">
 	    
     
@@ -119,13 +121,32 @@
     </div>
   
     <div id="header">
-      Richtext editor (
-      <a href="./?language=en">en</a>,
-      <a href="./?language=de">de</a>,
-      <a href="./?language=nl">nl</a>,
-      <a href="./?language=eo">eo</a>,
-      <a href="./?language=client">default</a>
-      )
+      <fmt:bundle basename="org.mmbase.jspeditors.editors">
+	<fmt:message key="richtext.editor"/>
+	<div id="languageSelector">
+	  <form name="languageform" method="get" action=".">
+	  <select onChange="document.forms['languageform'].submit();" name="language">
+	    <mm:compare referid="rich_language" value="client">
+	      <option value="client" selected="selected"><fmt:message key="default"/></option>
+	    </mm:compare>
+	    <mm:compare referid="rich_language" value="client" inverse="true">
+	      <option value="client"><fmt:message key="default"/></option>
+	    </mm:compare>
+	    <mm:import id="languages" vartype="list">en,de,nl,eo</mm:import>
+	    <mm:stringlist referid="languages">
+	      <mm:locale language="${_}" jspvar="locale">
+		<mm:compare referid2="rich_language">
+		  <option value="${_}" selected="selected"><jsp:expression xmlns:jsp="http://java.sun.com/JSP/Page">locale.getDisplayName(locale)</jsp:expression></option>
+		</mm:compare>
+		<mm:compare referid2="rich_language" inverse="true">
+		  <option value="${_}"><jsp:expression xmlns:jsp="http://java.sun.com/JSP/Page">locale.getDisplayName(locale)</jsp:expression></option>
+		</mm:compare>
+	      </mm:locale>
+	    </mm:stringlist>
+	  </select>
+	  </form>
+	</div>
+      </fmt:bundle>
     </div>
     <div id="leftColumn">
       <div id="leftColumnContent">
