--- a/contributions/didactor2/src/pop/templates/pop/css/pop.css
+++ b/contributions/didactor2/src/pop/templates/pop/css/pop.css
@@ -47,7 +47,7 @@ select.popteacherformselect {
 	font-size: 1.1em;
 	font-weight: normal;
 	color: #000000;
-	width: 16em;
+	width: 80%;
 	height: 1.4em;
 	padding: 0em 0em 0em 0em;
 	background-color: #EAEAEA;
